--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 0838594
-	trim = 
-	trimbase = 
+	base = 847a07f
+	trim = ament_lint
+	trimbase = 0838594
