--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 193c559
-	trim = 
-	trimbase = 
+	base = d310a29
+	trim = ament_clang_format
+	trimbase = 193c559
