--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 726defd
-	trim = 
-	trimbase = 
+	base = 34079b7
+	trim = ament_pyflakes
+	trimbase = 726defd
