--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 2475afc
-	trim = 
-	trimbase = 
+	base = 4602ae4
+	trim = ament_lint_auto
+	trimbase = 2475afc
