--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 68a1464
-	trim = 
-	trimbase = 
+	base = b92aa35
+	trim = ament_cmake_mypy
+	trimbase = 68a1464
