--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 1e348d4
-	trim = 
-	trimbase = 
+	base = 03419ad
+	trim = ament_mypy
+	trimbase = 1e348d4
