--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 5cba5ec
-	trim = 
-	trimbase = 
+	base = 83895b1
+	trim = ament_cmake_pycodestyle
+	trimbase = 5cba5ec
