--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 30d211c
-	trim = 
-	trimbase = 
+	base = 0c5b6b2
+	trim = ament_cmake_flake8
+	trimbase = 30d211c
