--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = c1d5fc9
-	trim = 
-	trimbase = 
+	base = f8f92d9
+	trim = ament_lint_cmake
+	trimbase = c1d5fc9
