--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 75d4cdb
-	trim = 
-	trimbase = 
+	base = 383fba9
+	trim = ament_cpplint
+	trimbase = 75d4cdb
