--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = f9eeeb2
-	trim = 
-	trimbase = 
+	base = 25fa6a3
+	trim = ament_cmake_pclint
+	trimbase = f9eeeb2
