--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 666aa00
-	trim = 
-	trimbase = 
+	base = a55aa73
+	trim = ament_pep257
+	trimbase = 666aa00
