--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = f0bd445
-	trim = 
-	trimbase = 
+	base = 3872e40
+	trim = ament_flake8
+	trimbase = f0bd445
