--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 0922b5d
-	trim = 
-	trimbase = 
+	base = 71832a2
+	trim = ament_pclint
+	trimbase = 0922b5d
