--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 17c01dd
-	trim = 
-	trimbase = 
+	base = 1c24a7a
+	trim = ament_cmake_xmllint
+	trimbase = 17c01dd
