--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = fd87738
-	trim = 
-	trimbase = 
+	base = 391abed
+	trim = ament_pycodestyle
+	trimbase = fd87738
