--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 72f7378
-	trim = 
-	trimbase = 
+	base = 9b24f84
+	trim = ament_copyright
+	trimbase = 72f7378
