--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = cf1416d
-	trim = 
-	trimbase = 
+	base = a41f1bf
+	trim = ament_cmake_clang_format
+	trimbase = cf1416d
