--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 1bf2075
-	trim = 
-	trimbase = 
+	base = 4237782
+	trim = ament_cppcheck
+	trimbase = 1bf2075
