--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = de1cc4b
-	trim = 
-	trimbase = 
+	base = 983d994
+	trim = ament_uncrustify
+	trimbase = de1cc4b
