--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 8a13667
-	trim = 
-	trimbase = 
+	base = b0ff78b
+	trim = ament_cmake_lint_cmake
+	trimbase = 8a13667
