--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = f9475e3
-	trim = 
-	trimbase = 
+	base = 87ac8d4
+	trim = ament_cmake_clang_tidy
+	trimbase = f9475e3
