--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 12ff71f
-	trim = 
-	trimbase = 
+	base = b61d267
+	trim = ament_xmllint
+	trimbase = 12ff71f
