--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = a0efe11
-	trim = 
-	trimbase = 
+	base = 220e39d
+	trim = ament_cmake_pyflakes
+	trimbase = a0efe11
