--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 5a50f91
-	trim = 
-	trimbase = 
+	base = e381fdc
+	trim = ament_lint_common
+	trimbase = 5a50f91
