--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 51d2ebe
-	trim = 
-	trimbase = 
+	base = 1791914
+	trim = ament_cmake_pep257
+	trimbase = 51d2ebe
