--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = e3f54c7
-	trim = 
-	trimbase = 
+	base = aa476d2
+	trim = ament_cmake_cppcheck
+	trimbase = e3f54c7
