--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 1216dd3
-	trim = 
-	trimbase = 
+	base = 23ed95d
+	trim = ament_clang_tidy
+	trimbase = 1216dd3
