--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = c17c2a0
-	trim = 
-	trimbase = 
+	base = 82e1548
+	trim = ament_cmake_uncrustify
+	trimbase = c17c2a0
