--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 32cd942
-	trim = 
-	trimbase = 
+	base = ae762c9
+	trim = ament_cmake_copyright
+	trimbase = 32cd942
