--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 647d812
-	base = 061b6c3
-	trim = 
-	trimbase = 
+	base = 2f6f432
+	trim = ament_cmake_cpplint
+	trimbase = 061b6c3
