--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cpplint
-	previous = 
-	base = 383fba9
+	previous = 383fba9
+	base = ce43667
 	trim = 
 	trimbase = 
