--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cpplint
-	previous = 
-	base = 1d2d9c0
+	previous = 1d2d9c0
+	base = 3b5c214
 	trim = 
 	trimbase = 
