--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_lint
-	previous = 
-	base = 847a07f
+	previous = 847a07f
+	base = 9a2195b
 	trim = 
 	trimbase = 
