--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_lint
-	previous = 
-	base = 565c71b
+	previous = 565c71b
+	base = f920145
 	trim = 
 	trimbase = 
