--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_lint_auto
-	previous = 
-	base = 4602ae4
+	previous = 4602ae4
+	base = 3fc8495
 	trim = 
 	trimbase = 
