--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_lint_auto
-	previous = 
-	base = d87fae4
+	previous = d87fae4
+	base = 3793af5
 	trim = 
 	trimbase = 
