--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_lint_cmake
-	previous = 
-	base = f8f92d9
+	previous = f8f92d9
+	base = 443b52d
 	trim = 
 	trimbase = 
