--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_lint_cmake
-	previous = 
-	base = 6eac780
+	previous = 6eac780
+	base = e169d36
 	trim = 
 	trimbase = 
