--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_pyflakes
-	previous = 
-	base = 220e39d
+	previous = 220e39d
+	base = e9d5688
 	trim = 
 	trimbase = 
