--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_pyflakes
-	previous = 
-	base = 2e08d92
+	previous = 2e08d92
+	base = 00e0d4d
 	trim = 
 	trimbase = 
