--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_pclint
-	previous = 
-	base = 25fa6a3
+	previous = 25fa6a3
+	base = 8c6c4b7
 	trim = 
 	trimbase = 
