--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_pclint
-	previous = 
-	base = 012034d
+	previous = 012034d
+	base = 40dcda5
 	trim = 
 	trimbase = 
