--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_clang_format
-	previous = 
-	base = d310a29
+	previous = d310a29
+	base = 0281e4c
 	trim = 
 	trimbase = 
