--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_clang_format
-	previous = 
-	base = 360bc0f
+	previous = 360bc0f
+	base = 8cb255a
 	trim = 
 	trimbase = 
