--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_flake8
-	previous = 
-	base = 3872e40
+	previous = 3872e40
+	base = b51d7b3
 	trim = 
 	trimbase = 
