--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_flake8
-	previous = 
-	base = ed920bf
+	previous = ed920bf
+	base = 5995651
 	trim = 
 	trimbase = 
