--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_mypy
-	previous = 
-	base = b92aa35
+	previous = b92aa35
+	base = 88b7e6f
 	trim = 
 	trimbase = 
