--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_mypy
-	previous = 
-	base = 4bc625a
+	previous = 4bc625a
+	base = b7e1bd1
 	trim = 
 	trimbase = 
