--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_copyright
-	previous = 
-	base = ae762c9
+	previous = ae762c9
+	base = 45b851c
 	trim = 
 	trimbase = 
