--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_copyright
-	previous = 
-	base = 9f703b3
+	previous = 9f703b3
+	base = 5df7bf1
 	trim = 
 	trimbase = 
