--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_lint_cmake
-	previous = 
-	base = b0ff78b
+	previous = b0ff78b
+	base = 96e8b37
 	trim = 
 	trimbase = 
