--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_lint_cmake
-	previous = 
-	base = 5af53dc
+	previous = 5af53dc
+	base = 8511e6a
 	trim = 
 	trimbase = 
