--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_cpplint
-	previous = 
-	base = 2f6f432
+	previous = 2f6f432
+	base = 096f0c6
 	trim = 
 	trimbase = 
