--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_cpplint
-	previous = 
-	base = a8fec09
+	previous = a8fec09
+	base = dee9367
 	trim = 
 	trimbase = 
