--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_mypy
-	previous = 
-	base = 03419ad
+	previous = 03419ad
+	base = 0ff5927
 	trim = 
 	trimbase = 
