--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_mypy
-	previous = 
-	base = 2898655
+	previous = 2898655
+	base = 55f23c4
 	trim = 
 	trimbase = 
