--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cppcheck
-	previous = 
-	base = 4237782
+	previous = 4237782
+	base = 1e31193
 	trim = 
 	trimbase = 
