--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cppcheck
-	previous = 
-	base = 9e9da68
+	previous = 9e9da68
+	base = 5b94c96
 	trim = 
 	trimbase = 
