--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_copyright
-	previous = 
-	base = 9b24f84
+	previous = 9b24f84
+	base = 07dd475
 	trim = 
 	trimbase = 
