--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_copyright
-	previous = 
-	base = 984d7dd
+	previous = 984d7dd
+	base = 9eb5151
 	trim = 
 	trimbase = 
