--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_pycodestyle
-	previous = 
-	base = 391abed
+	previous = 391abed
+	base = 0347544
 	trim = 
 	trimbase = 
