--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_pycodestyle
-	previous = 
-	base = e8ae4b0
+	previous = e8ae4b0
+	base = fa0e4b5
 	trim = 
 	trimbase = 
