--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_pycodestyle
-	previous = 
-	base = 83895b1
+	previous = 83895b1
+	base = ee3505b
 	trim = 
 	trimbase = 
