--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_pycodestyle
-	previous = 
-	base = 5cf3b86
+	previous = 5cf3b86
+	base = c990d7a
 	trim = 
 	trimbase = 
