--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_pclint
-	previous = 
-	base = 71832a2
+	previous = 71832a2
+	base = 587f837
 	trim = 
 	trimbase = 
