--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_pclint
-	previous = 
-	base = 0a19323
+	previous = 0a19323
+	base = bd76605
 	trim = 
 	trimbase = 
