--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_clang_tidy
-	previous = 
-	base = 23ed95d
+	previous = 23ed95d
+	base = 0055518
 	trim = 
 	trimbase = 
