--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_clang_tidy
-	previous = 
-	base = d347354
+	previous = d347354
+	base = 99fd4e1
 	trim = 
 	trimbase = 
