--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_lint_common
-	previous = 
-	base = e381fdc
+	previous = e381fdc
+	base = 3068c04
 	trim = 
 	trimbase = 
