--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_lint_common
-	previous = 
-	base = fe298ff
+	previous = fe298ff
+	base = 14a320a
 	trim = 
 	trimbase = 
