--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_clang_tidy
-	previous = 
-	base = 87ac8d4
+	previous = 87ac8d4
+	base = 463c06b
 	trim = 
 	trimbase = 
