--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_clang_tidy
-	previous = 
-	base = d2d056f
+	previous = d2d056f
+	base = 9295aee
 	trim = 
 	trimbase = 
