--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_clang_format
-	previous = 
-	base = a41f1bf
+	previous = a41f1bf
+	base = 01a92cc
 	trim = 
 	trimbase = 
