--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_clang_format
-	previous = 
-	base = 061efac
+	previous = 061efac
+	base = e3e3f83
 	trim = 
 	trimbase = 
