--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_pep257
-	previous = 
-	base = a55aa73
+	previous = a55aa73
+	base = b376fa1
 	trim = 
 	trimbase = 
