--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_pep257
-	previous = 
-	base = b6c8d9c
+	previous = b6c8d9c
+	base = a4033ea
 	trim = 
 	trimbase = 
