--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_cppcheck
-	previous = 
-	base = aa476d2
+	previous = aa476d2
+	base = cb28902
 	trim = 
 	trimbase = 
