--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_cppcheck
-	previous = 
-	base = f6e6760
+	previous = f6e6760
+	base = 0982e6a
 	trim = 
 	trimbase = 
