--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_uncrustify
-	previous = 
-	base = 983d994
+	previous = 983d994
+	base = de5282d
 	trim = 
 	trimbase = 
