--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_uncrustify
-	previous = 
-	base = d2c0651
+	previous = d2c0651
+	base = 77d925f
 	trim = 
 	trimbase = 
