--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_pyflakes
-	previous = 
-	base = 428ccd0
+	previous = 428ccd0
+	base = 608e72c
 	trim = 
 	trimbase = 
