--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_pep257
-	previous = 
-	base = 1791914
+	previous = 1791914
+	base = 90a1561
 	trim = 
 	trimbase = 
