--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_pep257
-	previous = 
-	base = dbbb97d
+	previous = dbbb97d
+	base = 3b53101
 	trim = 
 	trimbase = 
