--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_xmllint
-	previous = 
-	base = b61d267
+	previous = b61d267
+	base = 626c0de
 	trim = 
 	trimbase = 
