--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_xmllint
-	previous = 
-	base = 02c5c68
+	previous = 02c5c68
+	base = c543dff
 	trim = 
 	trimbase = 
