--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_uncrustify
-	previous = 
-	base = 82e1548
+	previous = 82e1548
+	base = 5e183b4
 	trim = 
 	trimbase = 
