--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_uncrustify
-	previous = 
-	base = b8de072
+	previous = b8de072
+	base = 6d5e6c6
 	trim = 
 	trimbase = 
