--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/ament_cmake_xmllint
-	previous = 
-	base = 1c24a7a
+	previous = 1c24a7a
+	base = ee1b82b
 	trim = 
 	trimbase = 
