--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_xmllint
-	previous = 
-	base = ef50682
+	previous = ef50682
+	base = ae5f5bb
 	trim = 
 	trimbase = 
