--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_flake8
-	previous = 
-	base = 785f519
+	previous = 785f519
+	base = 2f0faab
 	trim = 
 	trimbase = 
