--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_uncrustify
-	previous = 
-	base = f643861
+	previous = f643861
+	base = 3e197f0
 	trim = 
 	trimbase = 
