--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_lint_cmake
-	previous = 
-	base = c6b73fc
+	previous = c6b73fc
+	base = f10bfa7
 	trim = 
 	trimbase = 
