--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_lint
-	previous = 
-	base = 2741449
+	previous = 2741449
+	base = cdd3bad
 	trim = 
 	trimbase = 
