--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_lint_cmake
-	previous = 
-	base = ae89966
+	previous = ae89966
+	base = cc422e7
 	trim = 
 	trimbase = 
