--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_pep257
-	previous = 
-	base = 4846eda
+	previous = 4846eda
+	base = a522493
 	trim = 
 	trimbase = 
