--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_copyright
-	previous = 
-	base = 6aff62d
+	previous = 6aff62d
+	base = 472bfc6
 	trim = 
 	trimbase = 
