--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_xmllint
-	previous = 
-	base = a12bbd0
+	previous = a12bbd0
+	base = 748eacd
 	trim = 
 	trimbase = 
