--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_pclint
-	previous = 
-	base = 61b4bb7
+	previous = 61b4bb7
+	base = fa8a9f3
 	trim = 
 	trimbase = 
