--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_pycodestyle
-	previous = 
-	base = 5fcbb54
+	previous = 5fcbb54
+	base = 156ea8d
 	trim = 
 	trimbase = 
