--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_clang_format
-	previous = 
-	base = c0f8605
+	previous = c0f8605
+	base = aab724e
 	trim = 
 	trimbase = 
