--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_pyflakes
-	previous = 
-	base = c75783e
+	previous = c75783e
+	base = d5d2ad4
 	trim = 
 	trimbase = 
