--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_clang_tidy
-	previous = 
-	base = 1f01736
+	previous = 1f01736
+	base = 9149a29
 	trim = 
 	trimbase = 
