--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_cpplint
-	previous = 
-	base = f331120
+	previous = f331120
+	base = 69d8457
 	trim = 
 	trimbase = 
