--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_clang_format
-	previous = 
-	base = ae27fc7
+	previous = ae27fc7
+	base = fe22380
 	trim = 
 	trimbase = 
