--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_mypy
-	previous = 
-	base = 243050e
+	previous = 243050e
+	base = 8a8a765
 	trim = 
 	trimbase = 
