--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_flake8
-	previous = 
-	base = c4906ed
+	previous = c4906ed
+	base = 3597ee9
 	trim = 
 	trimbase = 
