--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_clang_tidy
-	previous = 
-	base = 3a3183d
+	previous = 3a3183d
+	base = 5b8cc8e
 	trim = 
 	trimbase = 
