--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_copyright
-	previous = 
-	base = 488361f
+	previous = 488361f
+	base = c756d18
 	trim = 
 	trimbase = 
