--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_pyflakes
-	previous = 
-	base = cdd72eb
+	previous = cdd72eb
+	base = 56a1ba4
 	trim = 
 	trimbase = 
