--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_xmllint
-	previous = 
-	base = 8282d52
+	previous = 8282d52
+	base = d16e5db
 	trim = 
 	trimbase = 
