--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_uncrustify
-	previous = 
-	base = 82fdff3
+	previous = 82fdff3
+	base = 07e7eb8
 	trim = 
 	trimbase = 
