--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_lint_common
-	previous = 
-	base = 8f4d40e
+	previous = 8f4d40e
+	base = 071a76b
 	trim = 
 	trimbase = 
