--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cppcheck
-	previous = 
-	base = 3a4778f
+	previous = 3a4778f
+	base = edd813a
 	trim = 
 	trimbase = 
