--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_lint_auto
-	previous = 
-	base = a5921b4
+	previous = a5921b4
+	base = 0bb0b17
 	trim = 
 	trimbase = 
