--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_mypy
-	previous = 
-	base = 5042a78
+	previous = 5042a78
+	base = dd835a1
 	trim = 
 	trimbase = 
