--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_pclint
-	previous = 
-	base = 400176f
+	previous = 400176f
+	base = f1958ec
 	trim = 
 	trimbase = 
