--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_pep257
-	previous = 
-	base = 35ee413
+	previous = 35ee413
+	base = 97f7871
 	trim = 
 	trimbase = 
