--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cmake_cppcheck
-	previous = 
-	base = d277e61
+	previous = d277e61
+	base = 1ad0522
 	trim = 
 	trimbase = 
