--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_flake8
-	previous = 
-	base = 484496b
+	previous = 484496b
+	base = 017600d
 	trim = 
 	trimbase = 
