--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_cpplint
-	previous = 
-	base = 794687f
+	previous = 794687f
+	base = 4553d1d
 	trim = 
 	trimbase = 
