--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_pycodestyle
-	previous = 
-	base = 2e13996
+	previous = 2e13996
+	base = 1c1b229
 	trim = 
 	trimbase = 
